--- a/Gerador de CPF/CSS/style.css
+++ b/Gerador de CPF/CSS/style.css
@@ -1,3 +1,10 @@
+#cpf {
+    text-align: center;
+}
+.btValidar{
+    font-size: medium;
+}
+
 .container {
     text-align: center;
 
@@ -15,8 +22,8 @@
 
 }
 #menu{
-    font-size: 140%;
-    background-color: #96ceb8;
+    font-size: 20px;
+    background-color: #ace3ec;
     color: black;
 
 }
@@ -26,4 +33,8 @@
 	text-align: center;
 	border-style: ridge;
 	border-color: #E7D5B0;
+}
+.resultado {
+    text-align: center;
+
 }
